--- a/vite-project/src/Styles/CreateQuotation.css
+++ b/vite-project/src/Styles/CreateQuotation.css
@@ -49,6 +49,9 @@
   justify-content: space-between;
   align-items: center;
 }
+.dropdown-option:hover{
+    background-color: #eee;
+}
 .body {
   background-color: #f5f7fa;
   width: 95.9%;
@@ -56,12 +59,51 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 25px 30px 23px 30px;
+  padding: 15px 30px 18px 30px;
 }
 .body .master {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   background-color: #fff;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   border-radius: 12px;
+  display: flex;
+  flex-direction: column;
 }
+.form-tracker{
+    padding: 10px 20px;
+    color: #5078E1;
+    border-bottom:2px solid #E4E8EE ;
+}
+.step{
+    padding: 2px;
+    border:  2px solid #CBD7F6;
+    border-radius: 50%;
+}
+.step div{
+    background-color:#5078e1 ;
+    color: white;
+    height: 20px;
+    width: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+  }
+  .breadcrumb{
+      color: #5078E1;
+      display: flex;
+      align-items: center;
+      font-weight: 500;
+      gap: 10px;
+      font-size: 14px;
+  
+  }
+  .main-body {
+    background-color: #f5f7fa;
+    width: 100%;
+    height: 456px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
